backend/apollo/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: apollo
  labels:
    app: auburnhacks
spec:
  type: NodePort
  selector:
    app: auburnhacks
  ports:
    - name: http
      protocol: TCP
      port: 8383
      targetPort: 8383
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8384
